feat(): support Java 8